# mew

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  index.html  mew.config.json  package-lock.json  package.json  tsconfig.json
.junie/: guidelines.md
examples/: basic_style.rs  css_variables.rs  directional_borders.rs
src/: Mew.ts  cl.ts  lib.rs  properties.rs  style.rs  tests.rs  values.rs  variable.rs
src/Mew/: Htmlify.ts  Parser.ts  Variables.ts
src/Mew/Config/: Conf.ts  CustomAttributes.ts  Presets.ts  SelfClosableTags.ts
src/Mew/Interfaces/: IAction.ts  IElement.ts  IMewConf.ts  IPreset.ts  IVariable.ts
src/Mew/Logic/: BlockElement.ts  Preset.ts  Variable.ts
src/Mew/Tools/: DeepMerge.ts
src/Mew/Types/: Attributes.ts  CustomAttributes.ts  DataType.ts
src/properties/: align_content.rs  align_items.rs  background_color.rs  border.rs  border_bottom.rs  border_left.rs  border_right.rs  border_top.rs  mod.rs
tests/: index.mew  main.js
